qtbase-opensource-src (5.12.5+dfsg-1) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * Merge 5.11.3+dfsg1-3 and -4 uploads from unstable.
  * Update symbols files from the current build logs with GCC 9.
  * New upstream release.
  * Drop hidpi_crash.diff, applied in the new release.

 -- Scarlett Moore <sgmoore@kde.org>  Tue, 06 Aug 2019 07:12:06 -0700

qtbase-opensource-src (5.12.4+dfsg-4) experimental; urgency=medium

  * Mark libqxcb-glx-integration.so and the corresponding CMake file as
    not installed on armel and armhf.

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 04 Jul 2019 22:35:09 +0300

qtbase-opensource-src (5.12.4+dfsg-3) experimental; urgency=medium

  * Backport upstream patch to fix Qt WebEngine segfault with multiple
    screens and HighDPI scaling (hidpi_crash.diff).
  * Install most of the CMake files for plugins. Third-party software
    can use these plugins to detect presence of certain features in Qt
    (e.g. Qt WebKit uses it to detect X11 support). Skip SQL plugins and
    theme plugins, to avoid introducing new dependencies for qtbase5-dev.
  * Make debian/libqt5gui5.install a bit more verbose.

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 04 Jul 2019 14:28:13 +0300

qtbase-opensource-src (5.12.4+dfsg-2) experimental; urgency=medium

  * Bump ABI version to qtbase-abi-5-12-4.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 18 Jun 2019 23:37:50 +0300

qtbase-opensource-src (5.12.4+dfsg-1) experimental; urgency=medium

  [ Scarlett Moore ]
  * Split the single doc-base file into per-submodule files.

  [ Dmitry Shachnev ]
  * New upstream release.
    - Added an X11 system tray watcher (closes: #867794).
  * Drop the two big-endian patches, both applied upstream.
  * Build-Depend-Indep on individual qdoc-qt5, qhelpgenerator-qt5 and
    qtattributionsscanner-qt5 packages, instead of qttools5-doc-tools.
  * Fix a typo in patch name (breachs → breaches).
  * Backport upstream patch to fix notification of QDockWidget when it gets